# PFX-Expiration

./: .gitignore  LICENSE.md  README.md  app.py  app.spec  pyproject.toml
compiler/: pfxexpiration_win64.iss
